# training-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  run-web.sh
deployment/: build.sh  delete.sh  deploy.sh  push.sh
deployment/k8s/: certificate.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
src/: cli.py  config.py  signal_sender.py  summary_agent.py  summary_api.py  training_agent.py  web.py
tests/: test_summary_api.py
